# python-fullstack-diploma

./: .env  .env.example  Dockerfile  PIYACHOK - Full Backend Test Collection.postman_collection.json  README.md  docker-compose.yml  nginx.conf  pyproject.toml
backend/apps/auth/: serializers.py  urls.py  views.py
backend/apps/chat/: consumers.py  models.py  permissions.py  routing.py  serializers.py  urls.py  views.py
backend/apps/comments/: consumers.py  models.py  permissions.py  routing.py  serializers.py  urls.py  views.py
backend/apps/favorite/: models.py  serializers.py  urls.py  views.py
backend/apps/forbiddenwords/: apps.py  models.py  urls.py  (+3 more)
backend/configs/: asgi.py  celery.py  routing.py  settings.py  urls.py
backend/core/: pagination.py
backend/templates/: account_deleted.html  blocked_venue.html  create_critic.html  listing_deleted.html  listing_publication.html  owner_create.html  owner_deleted.html  recovery.html  register.html  user_blocked.html  user_unblocked.html  venue_deleted.html  venue_publication.html  welcome.html
client/: asset-manifest.json  index.html
client/assets/: index-BLDwSnUy.js  index-BY5ytsic.js  index-B_AtgKpx.css  index-B_DoZ0BJ.css  index-CJbmGKm4.js  index-Cl1H6LDR.js  index-CmMDtxm2.js  index-DTg6gMXr.js  index-DURLZM5C.css  index-XH-qTA0I.css  index-qSFB-WbH.js  index-xytvYSUS.css
frontend/: .eslintrc.json  package-lock.json  package.json  postcss.config.mjs  vite.config.ts
frontend/src/: App.css  App.tsx  main.tsx
k8s/: deploy.yaml
k8s/app/: Dockerfile
k8s/celery/: Dockerfile
k8s/web/: Dockerfile
(+292 files in other folders)
